init asabri and paspor
